# gconnect

./: .dir-locals.el  .gitignore  .jsbeautifyrc  .travis.yml  CMakeLists.txt  HISTORY.md  README.md  autogen.sh  meson.build  meson_options.txt  meson_post_install.py
cli/: CMakeLists.txt  main.vala
cmake/: AddCompilerFlags.cmake  CodeCoverage.cmake  CompilePlugin.cmake  FindGLib.cmake  FindGObjectIntrospection.cmake  FindVala.cmake  FindValadoc.cmake  GSettings.cmake
daemon/: CMakeLists.txt  daemon.vala  main.vala  meson.build
gui/: CMakeLists.txt  gui.vala
gui/resources/: main-window.ui  resources.gresource.xml
gui/settings/: com.github.felipe-lavratti.vala-unittests-cmake.gschema.xml
lib/: CMakeLists.txt  config-header.vala.in  config.vala  config.vala.in  connection.vala  core.vala  device_mconnect.vala  devicemanager.vala  gconnect.gschema.xml  gconnect.pc.in  main.vala  meson.build  packet.vala  pluginmanager.vala
lib/channels/bluetooth/: bluetoothconfig.vala  bluetoothdbus-iface.vala  bluetoothdevicelink.vala  bluetoothlinkprovider.vala  bluetoothsocketconnection.vala  gconnect.bluetooth.gschema.xml
lib/channels/lan/: gconnect.lan.gschema.xml  lanconfig.vala  landevicelink.vala  lanlinkprovider.vala  lanpairinghandler.vala  lansocketconnection.vala  socketlinereader.vala
lib/channels/loopback/: loopbackconnection.vala
lib/conf/: meson.build
lib/crypt/: certificate.vala  crypt.c  crypt.h  crypt.vapi  libmconn_crypt_la-mconn-crypt.lo  mconn-crypt.c  mconn-crypt.h  mconn-crypt.vapi
lib/crypt/.deps/: libmconn_crypt_la-mconn-crypt.Plo
plugins/: CMakeLists.txt  ExamplePython.plugin  ExamplePython.py  ExampleVala.plugin  ExampleVala.vala  helper.py  meson.build  plugin.in
plugins/battery/: CMakeLists.txt  battery.plugin  battery.py  battery.vala  meson.build
plugins/clipboard/: CMakeLists.txt  clipboard.plugin  clipboard.vala  meson.build
plugins/findmyphone/: CMakeLists.txt  findmyphone.plugin  findmyphone.vala  meson.build
plugins/mousepad/: CMakeLists.txt  fakekey.vala  meson.build  mousepad.plugin  mousepad.vala  x11-xlib.vapi
plugins/mpriscontrol/: CMakeLists.txt  meson.build  mpriscontrol-iface.vala  mpriscontrol.py  mpriscontrol.vala
plugins/ping/: CMakeLists.txt  meson.build  ping.plugin  ping.py  ping.vala
plugins/python_plugins/input/: input.plugin  input.py
plugins/python_plugins/pybattery/: battery.py
plugins/python_plugins/pympriscontrol/: meson.build  mpriscontrol.plugin
plugins/python_plugins/pyping/: ping.py
plugins/remotekeyboard/: CMakeLists.txt  remotekeyboard.plugin  remotekeyboard.vala
plugins/runcommand/: CMakeLists.txt  gconnect.runcommand.gschema.xml  meson.build  runcommand.plugin  runcommand.vala
plugins/telephony/: CMakeLists.txt  meson.build  telephony.plugin  telephony.vala
po/: CMakeLists.txt  POTFILES
tests/: CMakeLists.txt  test_main.vala  test_my_class.vala  test_packet.vala
vapi/: gnutls-mconn.vapi  gnutls.vapi  uuid.vapi  xtst.vapi
vapis/: gnutls.vapi
